--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,16 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+scuttlebutt = { git = "https://github.com/Ra1issa/swanky.git",  features = ["serde1", "curve25519-dalek"], branch = "main" }
 rand = "0.8.3"
 curve25519-dalek = "3.2.0"
 rand_core = "0.5"
 sha2 = "0.9"
+
+[[bin]]
+name = "server"
+path = "src/bin/server.rs"
+
+[[bin]]
+name = "client"
+path = "src/bin/client.rs"
